category pagination done

--- a/views/admin/categoryManagement.ejs
+++ b/views/admin/categoryManagement.ejs
@@ -104,7 +104,7 @@
       <ul class="flex items-center -space-x-px h-10 text-base">
         <!-- Previous Button -->
         <li>
-          <a href=""
+          <a href="/admin/category?page=<%= currentPage - 1 %>&limit=<%= limit %>"
             class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700  %>">
             <span class="sr-only">Previous</span>
             <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
@@ -115,9 +115,9 @@
         </li>
 
         <!-- Page Numbers -->
-        <% for(let i=1; i <=4; i++) { %>
+        <% for(let i=1; i <=totalPages; i++) { %>
           <li>
-            <a href=""
+            <a href="/admin/category?page=<%= i %>&limit=<%= limit %>"
               class="flex items-center justify-center px-4 h-10 leading-tight  bg-white border  hover:bg-gray-100 %>">
               <%= i %>
             </a>
@@ -126,7 +126,7 @@
 
             <!-- Next Button -->
             <li>
-              <a href=""
+              <a href="/admin/category?page=<%= currentPage + 1 %>&limit=<%= limit %>"
                 class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 ">
                 <span class="sr-only">Next</span>
                 <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
